# fastapi-tdd-docker

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
project/app/: summarizer.py
project/app/api/: crud.py  summaries.py
project/tests/: test_summaries.py  test_summaries_unit.py
