[tool.poetry]
name = "app"
version = "0.1.0"
description = "Test-driven development with FastAPI and Docker"
authors = ["Jerome Blin <blinjrm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
asyncpg = "^0.22.0"
tortoise-orm = "^0.16.21"
pytest = "^6.2.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 88
